# apc524-final-project

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  requirements.txt  tradestrat.py  tutorial.ipynb  value.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: conf.py  index.md  index.rst  requirements.txt
src/: tutorial.ipynb
src/tests/: test_backtest.py  test_strategies.py
src/tradestrat/: __init__.py  backtest.py  momentum.py  strategies.py  tradestrat.py
tests/: test_backtest.py  test_strategies.py
