[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
name = "apc524-final-project"
version = "1.0"
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
  "pytest",
  "uncertainties",
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "openpyxl"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]

[tool.mypy]
files = "src"
python_version = "3.10"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true


# disable imports or control per-module/file settings here
[[tool.mypy.overrides]]
module = [ "numpy.*",  "sklearn.*", "pandas.*", "matplotlib.*",]
ignore_missing_imports = true

[tool.isort]
profile = "black"
